--- a/escom-bpm-web/src/main/webapp/view/processes/elements/exit-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/elements/exit-card.xhtml
@@ -2,7 +2,8 @@
                  xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                  xmlns:p="http://primefaces.org/ui"
                  template="/view/templ/templ-dlg.xhtml"
-                 xmlns:f="http://xmlns.jcp.org/jsf/core">
+                 xmlns:f="http://xmlns.jcp.org/jsf/core"
+                 xmlns:h="http://xmlns.jcp.org/jsf/html">
     
     <ui:param name="_bean" value="#{exitCardBean}"/>
 
@@ -21,9 +22,15 @@
         <p:tabView orientation="left" id="mainTabView" styleClass="ui-grid-col-12 col-padding" rendered="#{_bean.editedItem != null}" >
             <p:tab title="#{bundle.Properties}"  >
                 <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces" >                    
-                    <p:selectBooleanCheckbox itemLabel="#{bundle.CompletePprocess}" value="#{_bean.editedItem.finalize}" title="#{bundle.CompletePprocess}">                
+                    <p:selectBooleanCheckbox itemLabel="#{bundle.CompletePprocess}" value="#{_bean.editedItem.finalize}" title="#{bundle.CompletePprocess}">
+                        <p:ajax update="pnInfo"/>
                     </p:selectBooleanCheckbox>
-                
+                    
+                    <h:panelGrid id="pnInfo" columns="2">
+                        <p:graphicImage name="/images/escom_logo.jpg"  /> 
+                        <p:outputLabel value="#{msg.InfoProcExit}" rendered="#{_bean.editedItem.finalize}"/>
+                    </h:panelGrid>
+                    
                     <p:outputLabel value="#{bundle.State}:" indicateRequired="true"/>
                     <p:selectOneMenu value="#{exitCardBean.seletedState}" converter="stateConvertor"                             
                              required="#{param['isRequired'] == 'true'}" 
