--- a/escom-bpm-web/src/main/webapp/view/processes/elements/subprocess-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/elements/subprocess-card.xhtml
@@ -21,7 +21,7 @@
         <p:tabView orientation="left" id="mainTabView" styleClass="ui-grid-col-12 col-padding" rendered="#{_bean.editedItem != null}" >
             <p:tab id="tabProcess" title="#{bundle.SubProcess}"  >
                 <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces" >
-                    <p:outputLabel value="#{bundle.ProcessType}:" indicateRequired="true" />
+                    <p:outputLabel value="#{bundle.Type}:" indicateRequired="true" style="margin-bottom: 0px;" />
                     <ui:include src="/view/common/item-select-btn.xhtml" >
                         <ui:param name="_itemValue" value="#{subProcCardBean.selProcType}"/>
                         <ui:param name="_itemLabel" value="nameEndElipse"/>
@@ -35,7 +35,7 @@
                         <ui:param name="_update" value="procTempl"/>
                     </ui:include>
 
-                    <p:outputLabel value="#{bundle.ProcessTemplate}:" />
+                    <p:outputLabel value="#{bundle.ProcessTemplate}:" style="margin-bottom: 0px;"/>
                     <p:selectOneMenu id="procTempl" value="#{subProcCardBean.selProcTempl}" converter="procTemplConverter"
                                     styleClass="ui-grid-col-12"
                                     disabled="#{_bean.isReadOnly()}"
