--- a/escom-bpm-web/src/main/webapp/view/processes/process-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/process-card.xhtml
@@ -13,7 +13,7 @@
         <ui:define name="menuExtReports"> 
             <p:separator />
             <p:menuitem value="#{bundle.ConcorderList}" icon="ui-icon-document"
-                        rendered="#{_bean.editedItem.owner.showReports}"
+                        rendered="#{_bean.isShowReports()}"
                         disabled="#{_bean.editedItem.id == null}"
                         actionListener="#{processCardBean.onPreViewListConcorder()}">
             </p:menuitem>
@@ -153,17 +153,17 @@
                 </p:panelGrid>
             </p:tab>        
 
-            <p:tab title="#{bundle.ApprovalSheet}" rendered="#{_bean.editedItem.owner.showReports}">
+            <p:tab title="#{_bean.getHeaderTabReports()}" rendered="#{_bean.isShowReports()}">
                 <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces" > 
-                    <h:panelGroup styleClass="ui-grid-col-12 without-spaces" >                         
-                        <p:outputLabel value="#{bundle.NumberSheetConcorder}:" />
+                    <h:panelGrid columns="2" styleClass="without-spaces" >                         
+                        <p:outputLabel value="#{bundle.Number}:" />
                         <p:inputText value="#{processCardBean.editedItem.regNumber}" title="#{bundle.AutomaticallyGenerated}"                                      
                                      placeholder="#{bundle.AutomaticallyGenerated}"
                                      readonly="true"/>
-                    </h:panelGroup>
+                    </h:panelGrid>
 
                     <p:accordionPanel id="accord" widgetVar="accordion" >
-                        <p:tab title="#{bundle.ApprovalSheet}">
+                        <p:tab title="#{_bean.getHeaderTabReports()}">
                             <p:dataTable id="concorderList" value="#{processCardBean.editedItem.getReports()}" var="report" emptyMessage="#{bundle.EmptyTable}"
                                          rowKey="#{report.tempId}" selectionMode="single" 
                                          paginator="true" paginatorPosition="bottom" 
