--- a/escom-bpm-web/src/main/webapp/view/processes/types/processtype-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/types/processtype-card.xhtml
@@ -22,96 +22,61 @@
 
     <ui:define name="page_body">
         <p:tab id="cardTab" title="#{bundle.ProcessType}">
-            <p:panelGrid columns="1" layout="grid"  columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces">
-                <p:outputLabel value="#{bundle.Name}:"/>
+            <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces">                
+                <p:outputLabel value="#{bundle.Name}:" indicateRequired="true"/>
                 <p:inputText id="nameItem" value="#{_bean.editedItem.name}"
-                             styleClass="ui-grid-col-12"
+                             styleClass="ui-grid-col-12" 
                              onchange="return itemChange = 1;"
                              disabled="#{_bean.isReadOnly()}"
                              required="#{param['isRequired'] == 'true'}"
                              requiredMessage="#{bundle.Field} [#{bundle.Name}] #{bundle.MustBeFilled}"/>                             
-                
+
                 <p:outputLabel value="#{bundle.Code}:" />
-                <p:inputText id="typeCode" value="#{_bean.editedItem.code}" 
+                <p:inputText id="typeCode" value="#{_bean.editedItem.code}"
                              title="#{bundle.StringArbitrary}"
-                             disabled="#{_bean.isReadOnly() or!_bean.isHaveRightEdit()}"
+                             disabled="#{_bean.isReadOnly()}"
                              onchange="return itemChange = 1;">
                     <f:validateLength for="typeCode" maximum="10"/>
-                </p:inputText>
-                
-                <p:selectBooleanCheckbox itemLabel="#{bundle.ShowReportsTable}" 
-                                         disabled="#{_bean.isReadOnly()}"
-                                         value="#{_bean.editedItem.showReports}" >                
-                </p:selectBooleanCheckbox>
-                
-                <p:panelGrid columns="1" layout="grid" rendered="#{_bean.editedItem.id != 0 and applicationBean.canUsesProcess}" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces">
-                    <h:panelGrid columns="2" columnClasses="col-padding" styleClass="without-spaces">
-                        <p:outputLabel value="#{bundle.ProcessOptions}:"/>
-                        <p:inputSwitch value="#{_bean.editedItem.inheritRunOptions}" 
-                                       rendered="#{applicationBean.canUsesProcess}"
-                                       showLabels="true" onLabel="#{bundle.Inherit}" offLabel="#{bundle.Select}" disabled="#{_bean.isReadOnly()}">
-                                <p:ajax oncomplete="itemChange = 1;" update="procOptionsGroup"/>
-                        </p:inputSwitch>
-                    </h:panelGrid>
-                    <h:panelGroup id="procOptionsGroup" >
-                        <h:panelGrid columns="2" columnClasses="ui-grid-col-2 col-padding, ui-grid-col-10 col-padding" styleClass="ui-grid-col-12 without-spaces" rendered="#{!_bean.editedItem.inheritRunOptions}">
-                            <p:outputLabel value="#{bundle.Numerator}:" indicateRequired="true"/>
-                            <p:selectOneMenu id="numeratorMenu" value="#{_bean.editedItem.numerator}" converter="numPatternConvertor" 
-                                             disabled="#{_bean.isReadOnly()}"
-                                             onchange="return itemChange = 1;"
-                                             styleClass="ui-grid-col-12"
-                                             required="#{param['isRequired'] == 'true'}"
-                                             requiredMessage="#{bundle.Field} [#{bundle.Numerator}] #{bundle.MustBeFilled}">
-                                <f:selectItem value="#{null}" itemLabel="#{bundle.NotSpecified}" itemValue="#{null}" itemDisabled="true"/>
-                                <f:selectItems value="#{numeratorPatternBean.findAll()}" var="num" itemLabel="#{num.name}" itemValue="#{num}" />
-                            </p:selectOneMenu>
-                            
-                            <p:outputLabel value="#{bundle.StandardTermConcorded}:" indicateRequired="true" />
-                            <p:spinner value="#{_bean.editedItem.termHours}" min="0" max="999" size="3"                                    
-                                       onchange="return itemChange = 1;"
-                                       required="#{param['isRequired'] == 'true'}"
-                                       requiredMessage="#{bundle.Field} [#{bundle.StandardTermConcorded}] #{bundle.MustBeFilled}"
-                                       suffix="#{bundle.Hour}">
-                            </p:spinner>
-                            
-                            <p:outputLabel value="#{bundle.RunOptions}:" indicateRequired="true"/>
-                            <p:pickList value="#{_bean.runOptions}" var="item" converter="runOptionsConverter"
-                                        disabled="#{_bean.isReadOnly()}"
-                                        showCheckbox="true" responsive="true"
-                                        onTransfer="itemChange = 1;"
-                                        required="#{param['isRequired'] == 'true'}"
-                                        requiredMessage="#{bundle.Field} [#{bundle.RunOptions}] #{bundle.MustBeFilled}"                                
-                                        itemLabel="#{_bean.getLabelFromBundle(item.getBundleName())}" itemValue="#{item}">
-                                    <f:facet name="sourceCaption">#{bundle.Available}</f:facet>
-                                    <f:facet name="targetCaption">#{bundle.Selected}</f:facet>
-                            </p:pickList>
-                        </h:panelGrid>
-                    </h:panelGroup>
-                </p:panelGrid>
+                </p:inputText>                
             </p:panelGrid>
         </p:tab>
         
-        <p:tab title="#{bundle.Settings}" rendered="#{_bean.editedItem.id != 0 and applicationBean.canUsesProcess}">
-            <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces">                
-                <h:panelGrid columns="2" columnClasses="col-padding" styleClass="without-spaces">
-                    <p:outputLabel value="#{bundle.DefaultParams}:" />
-                    <p:inputSwitch value="#{_bean.editedItem.inheritTaskOptions}"                                
+        <p:tab title="#{bundle.ProcessesSettings}">
+            <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces"> 
+                <h:panelGrid columns="2" styleClass="without-spaces">
+                    <p:outputLabel value="#{bundle.ProcessOptions}:"/>
+                    <p:inputSwitch value="#{_bean.editedItem.inheritRunOptions}" 
+                                   rendered="#{applicationBean.canUsesProcess}"
                                    showLabels="true" onLabel="#{bundle.Inherit}" offLabel="#{bundle.Select}" disabled="#{_bean.isReadOnly()}">
-                            <p:ajax oncomplete="itemChange = 1;" update="gridSettings"/>
-                    </p:inputSwitch>
+                        <p:ajax oncomplete="itemChange = 1;" update="procOptionsGroup"/>
+                    </p:inputSwitch> 
                 </h:panelGrid>
-                <h:panelGroup id="gridSettings" >
-                    <h:panelGrid rendered="#{!_bean.editedItem.inheritTaskOptions}" columns="2" columnClasses="ui-grid-col-3 col-padding, ui-grid-col-9 col-padding" styleClass="ui-grid-col-12 without-spaces">
-                        <p:outputLabel value="#{bundle.DefaultTaskName}:" indicateRequired="true"/>
-                        <p:inputText value="#{_bean.editedItem.defaultTaskName}"
-                                     styleClass="ui-grid-col-12"
-                                     onkeypress="checkEsc();"
-                                     onchange="return itemChange = 1;"
-                                     disabled="#{_bean.isReadOnly()}"
-                                     required="#{param['isRequired'] == 'true'}"
-                                     requiredMessage="#{bundle.Field} [#{bundle.DefaultTaskName}] #{bundle.MustBeFilled}"/>
 
-                        <p:outputLabel value="#{bundle.DefaultDeadline}:"/>
+                <h:panelGroup id="procOptionsGroup" >
+                    <p:panelGrid layout="grid" columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces" rendered="#{!_bean.editedItem.inheritRunOptions}">
+                        <p:outputLabel value="#{bundle.ShowReportsTable}:" />
+                        <p:selectOneMenu value="#{_bean.editedItem.nameReports}"  
+                                         disabled="#{_bean.isReadOnly()}"
+                                         onchange="return itemChange = 1;"
+                                         styleClass="ui-grid-col-12"                                         
+                                         requiredMessage="#{bundle.Field} [#{bundle.ShowReportsTable}] #{bundle.MustBeFilled}">
+                            <f:selectItem value="#{null}" itemLabel="#{bundle.No}" itemValue="#{null}" />
+                            <f:selectItem itemLabel="#{bundle.ApprovalSheet}" itemValue="ApprovalSheet" />
+                            <f:selectItem itemLabel="#{bundle.ExecutionSheet}" itemValue="ExecutionSheet" />
+                        </p:selectOneMenu>
+                        
+                        <p:outputLabel value="#{bundle.Numerator}:" indicateRequired="true"/>
+                        <p:selectOneMenu id="numeratorMenu" value="#{_bean.editedItem.numerator}" converter="numPatternConvertor" 
+                                         disabled="#{_bean.isReadOnly()}"
+                                         onchange="return itemChange = 1;"
+                                         styleClass="ui-grid-col-12"
+                                         required="#{param['isRequired'] == 'true'}"
+                                         requiredMessage="#{bundle.Field} [#{bundle.Numerator}] #{bundle.MustBeFilled}">
+                            <f:selectItem value="#{null}" itemLabel="#{bundle.NotSpecified}" itemValue="#{null}" itemDisabled="true"/>
+                            <f:selectItems value="#{numeratorPatternBean.findAll()}" var="num" itemLabel="#{num.name}" itemValue="#{num}" />
+                        </p:selectOneMenu>
+
+                        <p:outputLabel value="#{bundle.DefaultDeadline}:" indicateRequired="true"/>
                         <h:panelGroup>
                             <div class="ui-inputgroup">
                             <p:spinner id="deltaDay" value="#{processTypesCardBean.deadLineDeltaDay}" min="0" max="999" 
@@ -127,6 +92,53 @@
                             </p:spinner>
                             </div>
                         </h:panelGroup>
+                                                
+                        <p:outputLabel value="#{bundle.RunOptions}:" indicateRequired="true"/>
+                        <p:pickList value="#{_bean.runOptions}" var="item" converter="runOptionsConverter"
+                                    disabled="#{_bean.isReadOnly()}"
+                                    showCheckbox="true" responsive="true"
+                                    onTransfer="itemChange = 1;"
+                                    required="#{param['isRequired'] == 'true'}"
+                                    requiredMessage="#{bundle.Field} [#{bundle.RunOptions}] #{bundle.MustBeFilled}"                                
+                                    itemLabel="#{_bean.getLabelFromBundle(item.getBundleName())}" itemValue="#{item}">
+                                <f:facet name="sourceCaption">#{bundle.Available}</f:facet>
+                                <f:facet name="targetCaption">#{bundle.Selected}</f:facet>
+                        </p:pickList>
+                    </p:panelGrid>
+                </h:panelGroup>
+            </p:panelGrid>
+        </p:tab>
+        
+        <p:tab title="#{bundle.TasksSettings}">
+            <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces">                
+                <h:panelGrid columns="2" styleClass="without-spaces">
+                    <p:outputLabel value="#{bundle.DefaultParams}:" />
+                    <p:inputSwitch value="#{_bean.editedItem.inheritTaskOptions}"                                
+                                   showLabels="true" onLabel="#{bundle.Inherit}" offLabel="#{bundle.Select}" disabled="#{_bean.isReadOnly()}">
+                            <p:ajax oncomplete="itemChange = 1;" update="gridSettings"/>
+                    </p:inputSwitch>
+                </h:panelGrid>                
+                
+                <h:panelGroup id="gridSettings" >
+                    <p:panelGrid layout="grid" rendered="#{!_bean.editedItem.inheritTaskOptions}" columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces">
+                        <p:outputLabel value="#{bundle.DefaultTaskName}:" indicateRequired="true"/>
+                        <p:inputText value="#{_bean.editedItem.defaultTaskName}"
+                                     styleClass="ui-grid-col-12"
+                                     onkeypress="checkEsc();"
+                                     onchange="return itemChange = 1;"
+                                     disabled="#{_bean.isReadOnly()}"
+                                     required="#{param['isRequired'] == 'true'}"
+                                     requiredMessage="#{bundle.Field} [#{bundle.DefaultTaskName}] #{bundle.MustBeFilled}"/>
+
+                        <p:outputLabel value="#{bundle.Role}:"/>
+                        <p:selectOneMenu value="#{_bean.editedItem.roleInProc}" filter="true" filterMatchMode="startsWith" title="#{bundle.Roles}"
+                                         styleClass="ui-grid-col-12"
+                                         disabled="#{_bean.isReadOnly()}"
+                                         onchange="return itemChange = 1;"
+                                         converter="groupsUserConvertor" placeholder="#{bundle.Select}">
+                           <f:selectItems value="#{userGroupsBean.findOnlyRoles()}" var="r" itemLabel="#{r.name}" itemValue="#{r}"/>
+                           <f:selectItem itemValue="#{null}" itemLabel="#{bundle.No}" />                           
+                        </p:selectOneMenu>                        
 
                         <p:outputLabel value="#{bundle.AvailableActions}:" indicateRequired="true"/>
                         <p:pickList id="pickList" value="#{processTypesCardBean.results}" var="result" converter="resultConverter"
@@ -139,7 +151,7 @@
                             <f:facet name="sourceCaption">#{bundle.AvailableButton}</f:facet>
                             <f:facet name="targetCaption">#{bundle.Selected}</f:facet>
                         </p:pickList>
-                    </h:panelGrid>
+                    </p:panelGrid>
                 </h:panelGroup>
             </p:panelGrid>
         </p:tab>
