--- a/escom-bpm-web/src/main/webapp/view/staffs/staff-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/staffs/staff-card.xhtml
@@ -9,7 +9,7 @@
     <ui:define name="page_body">
 
         <p:tab title="#{bundle.Staff}">     
-            <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces" >       
+            <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces" >       
 
                 <p:outputLabel value="#{bundle.OrgUnit}:"/>                
                 <p:inputText value="#{staffCardBean.editedItem.orgUnit}" disabled="true" styleClass="ui-grid-col-12" />
@@ -40,7 +40,7 @@
                     <ui:param name="_itemPanel" value="userPanel"/>
                     <ui:param name="_titleItem" value="#{bundle.User}"/>
                     <ui:param name="_selectorBean" value="#{userBean}"/>
-                    <ui:param name="_items" value="#{userBean.findVacantUsers()}"/>
+                    <ui:param name="_items" value="#{userBean.findAll()}"/>
                     <ui:param name="_actionClear" value="setEmployee"/>
                     <ui:param name="_actionSelect" value="onEmployeeSelected"/>
                     <ui:param name="_update" value=""/>
