--- a/escom-bpm-web/src/main/webapp/view/common/error-dlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/error-dlg.xhtml
@@ -14,8 +14,7 @@
         </h:form>
     </p:dialog>
 
-    <p:dialog id="exceptionDialog" header="Exception '#{pfExceptionHandler.type}' occured!" widgetVar="exceptionDialog"
-              height="500px">
+    <p:dialog id="exceptionDialog" header="Exception '#{pfExceptionHandler.type}' occured!" widgetVar="exceptionDialog" width="550" height="450px">
         Message: #{pfExceptionHandler.message} <br/>
         StackTrace: <h:outputText value="#{pfExceptionHandler.formattedStackTrace}" escape="false" /> <br />
  
