--- a/escom-bpm-web/src/main/webapp/view/processes/monitor.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/monitor.xhtml
@@ -24,7 +24,7 @@
         <p:defaultCommand target="mainFRM:btnSearche" />
                 
         <p:panel toggleable="true" header="#{bundle.Filter}" toggleSpeed="500" >
-            <h:panelGrid columns="5" styleClass="without-spaces">
+            <h:panelGrid columns="6" styleClass="without-spaces">
                 <p:panelGrid columns="1" styleClass="without-spaces">
                     <p:outputLabel value="#{bundle.Initiator}:" />
                     <ui:include src="/view/common/item-select-list-btn.xhtml" >
@@ -106,6 +106,16 @@
                     </p:selectManyMenu>
                 </h:panelGrid>
                 
+                <h:panelGrid columns="1" styleClass="without-spaces">
+                    <p:outputLabel value="#{bundle.Number}:" />
+                    <h:panelGroup>
+                    <div class="ui-inputgroup">
+                        <p:inputText value="#{monitorBean.number}" widgetVar="srcNumber"/>
+                        <p:commandButton styleClass="btnClear" title="#{bundle.Clear}" icon="ui-icon-close" onclick="PF('srcNumber').jq.val('');"/>                        
+                    </div>
+                    </h:panelGroup>
+                </h:panelGrid>
+                
                 <p:commandButton icon="ui-icon-search" value="#{bundle.Find}"
                          actionListener="#{monitorBean.onRefreshData()}">
                 </p:commandButton>
@@ -133,7 +143,7 @@
                 <h:outputLabel value="#{item.regNumber}"/>
             </p:column>
             
-            <p:column headerText="#{''.concat(bundle.Curator).concat(' / ').concat(bundle.Executor)}">
+            <p:column headerText="#{bundle.Role}">
                 <h:outputLabel value="#{monitorBean.onGetItemTitle(item)}"/>
             </p:column>
 
