--- a/escom-bpm-web/src/main/webapp/view/processes/process-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/process-card.xhtml
@@ -76,14 +76,28 @@
         <ui:define name="page_body">                
             <p:tab title="#{bundle.Process}">
                 <p:panelGrid columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces" >
-                    <p:outputLabel value="#{bundle.Document}:" indicateRequired="true" />
+                    <p:outputLabel value="#{bundle.Organization}:" for="company" indicateRequired="true"/>
+                    <div class="ui-inputgroup">
+                    <p:selectOneMenu value="#{_bean.editedItem.company}" id="company" converter="companyConvertor"
+                                     title="#{bundle.CompanyDocRegistred}"
+                                     disabled="#{_bean.isReadOnly()}"
+                                     styleClass="ui-grid-col-12"
+                                     onchange="return itemChange = 1;"
+                                     required="#{param['isRequired'] == 'true'}"
+                                     requiredMessage="#{bundle.Field} [#{bundle.Organization}] #{bundle.MustBeFilled}">
+                        <f:selectItems value="#{companyBean.findAll()}" var="org" itemLabel="#{org.name}" itemValue="#{org}" />
+                        <f:selectItem value="#{null}" itemLabel="#{bundle.EmptySelData}" itemValue="#{null}" noSelectionOption="true"/>                        
+                    </p:selectOneMenu>
+                    </div>
+                    
+                    <p:outputLabel value="#{bundle.MainDoc}:" indicateRequired="true" />
                     <ui:include src="/view/common/item-select-btn.xhtml" >
                         <ui:param name="_itemValue" value="#{_bean.editedItem.document}"/>
                         <ui:param name="_itemLabel" value="nameEndElipse"/>
                         <ui:param name="_required" value="true" />
                         <ui:param name="_disabled" value="#{_bean.isReadOnly()}"/>
                         <ui:param name="_itemPanel" value="documentPanel"/>
-                        <ui:param name="_titleItem" value="#{bundle.DocumentForConcorded}"/>
+                        <ui:param name="_titleItem" value="#{bundle.MainDoc}"/>
                         <ui:param name="_selectorBean" value="#{docBean}"/>
                         <ui:param name="_items" value="#{docBean.findAll()}"/>
                         <ui:param name="_actionClear" value="setDocument"/>
@@ -98,15 +112,6 @@
                         </p:commandLink>
                     </h:panelGroup>
                      
-                    <p:outputLabel value="#{bundle.ProcessCaption}:" indicateRequired="true" />
-                    <p:inputText id="nameItem" value="#{processCardBean.editedItem.name}"
-                                 styleClass="ui-grid-col-12" 
-                                 onkeypress="checkEsc();"
-                                 onchange="return itemChange = 1;"
-                                 disabled="#{processCardBean.isReadOnly()}"
-                                 required="#{param['isRequired'] == 'true'}"
-                                 requiredMessage="#{bundle.Field} [#{bundle.ProcessCaption}] #{bundle.MustBeFilled}"/>
-
                     <p:outputLabel value="#{bundle.Curator}:" indicateRequired="true" />
                     <ui:include src="/view/common/item-select-list-btn.xhtml" >
                         <ui:param name="_itemValue" value="#{_bean.editedItem.curator}"/>
@@ -122,6 +127,15 @@
                         <ui:param name="_actionSelect" value="onChangeCurator"/>
                         <ui:param name="_update" value=""/>
                     </ui:include>
+                    
+                    <p:outputLabel value="#{bundle.ProcessCaption}:" indicateRequired="true" />
+                    <p:inputText id="nameItem" value="#{processCardBean.editedItem.name}"
+                                 styleClass="ui-grid-col-12" 
+                                 onkeypress="checkEsc();"
+                                 onchange="return itemChange = 1;"
+                                 disabled="#{processCardBean.isReadOnly()}"
+                                 required="#{param['isRequired'] == 'true'}"
+                                 requiredMessage="#{bundle.Field} [#{bundle.ProcessCaption}] #{bundle.MustBeFilled}"/>                    
 
                     <p:outputLabel value="#{bundle.Term}:" indicateRequired="true"/> 
                     <p:calendar id="dtPlanExecDate" value="#{processCardBean.editedItem.planExecDate}"  
